turtleart.stairs.Stairs.scala.error
Compilation error:
Stairs:4: error: type mismatch;
 found   : Int
 required: Boolean
    if(i%2)
        ^