turtleart.stairs.Stairs.scala.code
override def run() {
  for(i <- 1 to 12) {
    avance(35)
    if(i%2)
      droite(90)
    else
    	gauche(90)
  }
}